<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#0C5E14"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/home"
                android:textAlignment="center"
                android:textSize="30dp"
                android:layout_marginTop="26dp"
                android:textStyle="bold"/>







            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="15dp"
                android:backgroundTint="@color/card"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--                    <ImageView-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="194dp"-->
                    <!--                        app:srcCompat="@drawable/card1"-->
                    <!--                        android:scaleType="centerCrop"-->
                    <!--                        android:contentDescription="@string/des1"-->
                    <!--                        />-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="214dp"
                            android:layout_height="wrap_content"

                            android:text="Savidya Semini"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/head1"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/des1"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/phone1"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"/>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="15dp"
                android:backgroundTint="@color/card" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="254dp"
                        android:contentDescription="@string/des1"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/teaset" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/userName2"
                            android:layout_width="214dp"
                            android:layout_height="wrap_content"

                            android:text="@string/chathumi_rubasingha"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/head2"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/des2"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price2"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/phone2"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"/>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="15dp"
                android:backgroundTint="@color/card"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="394dp"
                        app:srcCompat="@drawable/diy"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/des1"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/userName3"
                            android:layout_width="214dp"
                            android:layout_height="wrap_content"

                            android:text="Janeesha Pabasara"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/head3"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/des3"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/phone3"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>








        </LinearLayout>

    </ScrollView>



    <!--    <FrameLayout-->
    <!--        android:id="@+id/container"-->
    <!--        android:layout_width="389dp"-->
    <!--        android:layout_height="75dp"-->
    <!--        android:layout_above="@id/bottom_navigation"-->
    <!--        android:layout_marginBottom="34dp" />-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottomnavbar" />
</androidx.constraintlayout.widget.ConstraintLayout>